@@ -52,11 +52,13 @@
         if (strlen($display_params['display_ctry_4']['value'])>0) { $iso3_list[] = $display_params['display_ctry_4']['value']; }
         $idx = 1;
         $country_name = '';
-        foreach ($iso3_list as $iso3) {
-            $country_name .= get_country_name($display_params, $country_list, $region_list, $iso3);
-            if (($idx    < count($iso3_list)) & count($iso3_list)!=2) { $country_name .= ","; }
-            if (++$idx == count($iso3_list))                          { $country_name .= " and"; }
-            $country_name .= " ";
+        if (strlen(get_country_name($display_params, $country_list, $region_list))>0) {
+            foreach ($iso3_list as $iso3) {
+                $country_name .= get_country_name($display_params, $country_list, $region_list, $iso3);
+                if (($idx    < count($iso3_list)) & count($iso3_list)!=2) { $country_name .= ","; }
+                if (++$idx == count($iso3_list))                          { $country_name .= " and"; }
+                $country_name .= " ";
+            }
         }
         if ($country_name != '') {
             $table_name = sprintf(_('%1$s for %2$s'), $table_name, $country_name);
