@@ -1,3 +1,6 @@
+rev 610 (2024-03-27) (krueschan)
+- minor changes to country report layout
+
 rev 609 (2024-03-26) (krueschan)
 - minor change to country report table formatting
 
